# agent-experiments

./: README.md
cerberus-approval-ladder/: NEGATIVE_LADDER.md  README.md  live-cerberus-results-2026-06-25.md  result-template.md
cerberus-approval-ladder/00-moodmosaic/: README.md  pitch.md
cerberus-approval-ladder/00-moodmosaic/app/: app.js  index.html  styles.css
cerberus-approval-ladder/01-chainmood/: README.md  pitch.md
cerberus-approval-ladder/01-chainmood/app/: app.js  index.html  styles.css
cerberus-approval-ladder/02-evm-mood-pass/: README.md  pitch.md
cerberus-approval-ladder/02-evm-mood-pass/abi/: EvmMoodPass.abi.json
cerberus-approval-ladder/02-evm-mood-pass/app/: app.js  index.html  styles.css
cerberus-approval-ladder/02-evm-mood-pass/contracts/: EvmMoodPass.sol
cerberus-approval-ladder/03-vara-echo-box/: README.md  interface.md  pitch.md
cerberus-approval-ladder/04-bounty-burn/: README.md  interface.md  pitch.md
cerberus-approval-ladder/05-price-pulse-vara/: README.md  interface.md  pitch.md
cerberus-approval-ladder/06-trust-score-one/: README.md  interface.md  pitch.md
cerberus-approval-ladder/07-receipt-lite/: README.md  interface.md  pitch.md
cerberus-approval-ladder/08-proof-pack/: README.md  build-notes.md  interface.md  pitch.md
cerberus-approval-ladder/09-integration-intent/: README.md  interface.md  pitch.md
cerberus-approval-ladder/10-tiny-poll/: README.md  interface.md  pitch.md
cerberus-approval-ladder/10-tiny-poll/sails/: Cargo.toml  README.md  build.rs  rust-toolchain.toml  skills.md
cerberus-approval-ladder/10-tiny-poll/sails/.github/workflows/: ci.yml
cerberus-approval-ladder/10-tiny-poll/sails/app/: Cargo.toml
cerberus-approval-ladder/10-tiny-poll/sails/app/src/: lib.rs
cerberus-approval-ladder/10-tiny-poll/sails/client/: Cargo.toml  build.rs  sails_client.idl
cerberus-approval-ladder/10-tiny-poll/sails/client/src/: lib.rs  sails_client.rs
cerberus-approval-ladder/10-tiny-poll/sails/registry/: readiness.json  register_application.json
cerberus-approval-ladder/10-tiny-poll/sails/src/: lib.rs
cerberus-approval-ladder/10-tiny-poll/sails/tests/: gtest.rs
cerberus-approval-ladder/11-headless-receipt-stamp/: README.md
cerberus-approval-ladder/12-chat-badge-ui/: README.md
cerberus-approval-ladder/13-broken-vote-sails/: README.md
cerberus-approval-ladder/14-admin-fee-market/: README.md
cerberus-approval-ladder/15-agent-calculator/: README.md  skills.md
cerberus-approval-ladder/15-agent-calculator/sails-program/client/: Cargo.toml  agent_calculator_client.idl  build.rs
cerberus-approval-ladder/15-agent-calculator/sails-program/client/src/: agent_calculator_client.rs  lib.rs
cerberus-approval-ladder/16-unit-converter/: README.md
cerberus-approval-ladder/16-unit-converter/sails-program/: Cargo.toml  README.md  build.rs
cerberus-approval-ladder/16-unit-converter/sails-program/.github/workflows/: ci.yml
cerberus-approval-ladder/16-unit-converter/sails-program/app/: Cargo.toml
cerberus-approval-ladder/16-unit-converter/sails-program/app/src/: lib.rs
cerberus-approval-ladder/16-unit-converter/sails-program/client/: Cargo.toml  build.rs  unit_converter_client.idl
cerberus-approval-ladder/16-unit-converter/sails-program/client/src/: lib.rs  unit_converter_client.rs
cerberus-approval-ladder/16-unit-converter/sails-program/src/: lib.rs
cerberus-approval-ladder/16-unit-converter/sails-program/tests/: gtest.rs
cerberus-approval-ladder/20-admin-control-panel/: README.md
cerberus-approval-ladder/20-admin-control-panel/sails-program/: Cargo.toml  README.md  build.rs
cerberus-approval-ladder/20-admin-control-panel/sails-program/.github/workflows/: ci.yml
cerberus-approval-ladder/20-admin-control-panel/sails-program/app/src/: lib.rs
cerberus-approval-ladder/20-admin-control-panel/sails-program/client/: admin_control_panel_client.idl  build.rs
cerberus-approval-ladder/20-admin-control-panel/sails-program/client/src/: admin_control_panel_client.rs
cerberus-approval-ladder/20-admin-control-panel/sails-program/src/: lib.rs
cerberus-approval-ladder/20-admin-control-panel/sails-program/tests/: gtest.rs
cerberus-approval-ladder/20-dangerous-admin-control/: README.md
cerberus-approval-ladder/live-chat-args/: 00-moodmosaic.json  01-chainmood-text-tag.json  01-chainmood.json  02-evm-mood-pass-approval-ask.json  03-vara-echo-box-approval-ask.json  04-bounty-burn-approval-ask.json  05-price-pulse-vara-approval-ask.json  06-trust-score-one-approval-ask.json  07-receipt-lite-approval-ask.json
cerberus-approval-ladder/live-review-args/: 00-moodmosaic-project-review.json
docs/: cerberus-approval-ladder-plan-2026-06-25.md
(+79 files in other folders)
