[package]
name = "admin-control-panel"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package allowing to build WASM binary for the program and IDL file for it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
admin-control-panel-app.workspace = true
sails-rs.workspace = true

[dev-dependencies]
admin-control-panel-app.workspace = true
admin-control-panel-client.workspace = true
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[build-dependencies]
admin-control-panel-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/MedovTimur/agent-experiments"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "0.10.3"
tokio = "1.48.0"
admin-control-panel-app = { version = "0.1.0", path = "app" }
admin-control-panel-client = { version = "0.1.0", path = "client" }
