[package]
name = "agent-calculator-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package containing the client for the program allowing to interact with it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true

[build-dependencies]
agent-calculator-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }
